--- a/Configs/.local/share/hyde/schema/config.toml.json
+++ b/Configs/.local/share/hyde/schema/config.toml.json
@@ -457,6 +457,19 @@
                 }
             }
         },
+        "screenshot.ocr": {
+            "description": "OCR configuration.",
+            "type": "object",
+            "properties": {
+                "tesseract_languages": {
+                    "default": [
+                       "eng"
+                    ],
+                    "description": "Place desired languages to use for text recognition. To see installed languages run `tesseract --list-langs`.",
+                    "type": "array"
+                }
+            }
+        },
         "rofi.bookmark": {
             "description": "Bookmark configuration.",
             "type": "object",
