fix(hyprland): center and resize file chooser dialogs (as suggested)

--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -62,3 +62,8 @@ layerrule = ignorezero,logout_dialog
 layerrule = blur,waybar
 layerrule = ignorezero,waybar
 
+
+# Fix file chooser dialogs opening off-screen
+windowrulev2 = float,  class:^([Xx]dg-desktop-portal-gtk)$
+windowrulev2 = center, class:^([Xx]dg-desktop-portal-gtk)$
+#windowrulev2 = size 70% 70%, class:^([Xx]dg-desktop-portal-gtk)$
