--- a/Configs/.config/hypr/windowrules.conf
+++ b/Configs/.config/hypr/windowrules.conf
@@ -130,15 +130,10 @@ layerrule = ignorezero,swaync-control-center
 layerrule = blur,logout_dialog
 
 
-# Fix file chooser dialogs opening off-screen
-windowrulev2 = float,  class:^(Xdg-desktop-portal-gtk)$
-windowrulev2 = center, class:^(Xdg-desktop-portal-gtk)$
-windowrulev2 = size 70% 70%, class:^(Xdg-desktop-portal-gtk)$
-
 windowrulev2 = float,  class:^(org.freedesktop.impl.portal.desktop.gtk)$
 windowrulev2 = center, class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrulev2 = size 70% 70%, class:^(org.freedesktop.impl.portal.desktop.gtk)$
+#windowrulev2 = size 70% 70%, class:^(org.freedesktop.impl.portal.desktop.gtk)$
 
 windowrulev2 = float,  class:^(org.freedesktop.impl.portal.desktop.hyprland)$
 windowrulev2 = center, class:^(org.freedesktop.impl.portal.desktop.hyprland)$
-windowrulev2 = size 70% 70%, class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+#windowrulev2 = size 70% 70%, class:^(org.freedesktop.impl.portal.desktop.hyprland)$
