fixes an issue as suggested by @kRHYME7 and @zeerayne

--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -64,6 +64,9 @@ layerrule = ignorezero,waybar
 
 
 # Fix file chooser dialogs opening off-screen
-windowrulev2 = float,  class:^([Xx]dg-desktop-portal-gtk)$
-windowrulev2 = center, class:^([Xx]dg-desktop-portal-gtk)$
-#windowrulev2 = size 70% 70%, class:^([Xx]dg-desktop-portal-gtk)$
+windowrule = float,tag:portal-dialogs
+windowrule = center,tag:portal-dialogs
+
+windowrule = tag +portal-dialogs,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+windowrule = tag +portal-dialogs,class:^(org.freedesktop.impl.portal.desktop.gtk)$
+windowrule = tag +portal-dialogs,class:^([Xx]dg-desktop-portal-gtk)$
