--- a/Configs/.local/share/hypr/defaults.conf
+++ b/Configs/.local/share/hypr/defaults.conf
@@ -53,7 +53,8 @@ input {
 
 gestures {
     #See https://wiki.hyprland.org/Configuring/Variables/#gestures
-    workspace_swipe = true
+    gesture = 3, right, workspace, +1
+    gesture = 3, left, workspace, -1
 }
 
 
