--- a/Configs/.local/share/hypr/defaults.conf
+++ b/Configs/.local/share/hypr/defaults.conf
@@ -51,12 +51,10 @@ input {
     numlock_by_default = true
 }
 
-gestures {
-    #See https://wiki.hyprland.org/Configuring/Variables/#gestures
-    gesture = 3, right, workspace, +1
-    gesture = 3, left, workspace, -1
-}
-
+#See https://wiki.hypr.land/Configuring/Gestures/
+gesture = 3, horizontal, workspace
+gesture = 3, pinchin,float,tile
+gesture = 3, pinchout,float, float
 
 # // █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
 # // █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
