fix: simplify window rules for `xdg-desktop-portal-gtk`

--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -16,7 +16,6 @@ windowrule = size <60% <90%,tag:common-popups
 windowrule = float,tag:portal-dialogs
 windowrule = center,tag:portal-dialogs
 
-
 # Only add the Core applications here
 windowrule = float,class:^(com.gabm.satty)$
 windowrule = float,class:^(org.kde.dolphin)$,title:^(Progress Dialog — Dolphin)$
@@ -39,7 +38,6 @@ windowrule = float,class:^(blueman-manager)$
 windowrule = float,class:^(nm-applet)$
 windowrule = float,class:^(nm-connection-editor)$
 windowrule = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrule = float,class:^([Xx]dg-desktop-portal-gtk)$
 
 # common popups
 windowrule =  tag +common-popups,initialTitle:^(Open File)$
@@ -47,7 +45,7 @@ windowrule =  tag +common-popups,title:^(Choose Files)$
 windowrule =  tag +common-popups,title:^(Save As)$
 windowrule =  tag +common-popups,title:^(Confirm to replace files)$
 windowrule =  tag +common-popups,title:^(File Operation Progress)$
-windowrule =  tag +common-popups,class:^(xdg-desktop-portal-gtk)$
+windowrule =  tag +common-popups,class:^([Xx]dg-desktop-portal-gtk)$
 
 # portal-dialogs
 windowrule = tag +portal-dialogs,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
