Added hide_cursor = true for all hyprlock configs

--- a/Configs/.config/hypr/hyprlock/Arfan on Clouds.conf
+++ b/Configs/.config/hypr/hyprlock/Arfan on Clouds.conf
@@ -5,6 +5,10 @@
 $resolve.font=SF Pro Display|https://font.download/dl/font/sf-pro-display.zip
 $resolve.font=AlfaSlabOne|https://font.download/dl/font/alfa-slab-one.zip
 
+general {
+    hide_cursor = true
+}
+
 # BACKGROUND
 background {
     monitor =
