--- a/Configs/.config/hypr/hyprlock/SF Pro.conf
+++ b/Configs/.config/hypr/hyprlock/SF Pro.conf
@@ -4,6 +4,10 @@
 
 $resolve.font=SF Pro Display|https://font.download/dl/font/sf-pro-display.zip
 
+general {
+    hide_cursor = true
+}
+
 # BACKGROUND
 background {
     monitor =
