--- a/Configs/.config/hypr/hyprlock/greetd-wallbash.conf
+++ b/Configs/.config/hypr/hyprlock/greetd-wallbash.conf
@@ -2,6 +2,10 @@
 # Converted to dynamically change colors via wallbash
 # Modified by: The HyDE Project
 
+general {
+    hide_cursor = true
+}
+
 # GENERAL
 general {
     no_fade_in = true
