--- a/Configs/.config/hypr/hyprlock/Anurati.conf
+++ b/Configs/.config/hypr/hyprlock/Anurati.conf
@@ -14,6 +14,10 @@ $fontFamily = JetBrainsMono Nerd Font # We already have this font installed
 $resolve.font=Anurati|https://font.download/dl/font/anurati.zip
 $resolve.font=Inter|https://github.com/rsms/inter/releases/download/v4.1/Inter-4.1.zip
 
+general {
+    hide_cursor = true
+}
+
 background {
     monitor =
     color = $wallbash_pry1_rgba
