fix: update lockscreen.sh path

--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -32,7 +32,7 @@ bindd = $mainMod, Delete, $d kill hyprland session, exec, hyde-shell logout
 bindd = $mainMod, W, $d Toggle floating, togglefloating
 bindd = $mainMod, G, $d toggle group, togglegroup
 bindd = Shift, F11, $d toggle fullscreen, fullscreen
-bindd = $mainMod, L, $d lock screen, exec, lockscreen.sh
+bindd = $mainMod, L, $d lock screen, exec, $srcPath/lockscreen.sh
 bindd = $mainMod Shift, F, $d toggle pin on focused window, exec, $scrPath/windowpin.sh
 bindd = Control Alt, Delete, $d logout menu, exec, $scrPath/logoutlaunch.sh
 bindd = Alt_R, Control_R, $d toggle waybar and reload config, exec, hyde-shell waybar --hide
