--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -8,70 +8,70 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
 # Sizes for floating popups
-windowrule = size <85% <95%,floating:1
-windowrule = float,tag:common-popups
-windowrule = size <60% <90%,tag:common-popups
+windowrule = size <85% <95%,match:float true
+windowrule = match:tag common-popups true , match:float true
+windowrule = size <60% <90%,match:tag common-popups
 
 # Fix file chooser dialogs opening off-screen
-windowrule = float,tag:portal-dialogs
-windowrule = center,tag:portal-dialogs
+windowrule = match:float true,match:tag portal-dialogs
+windowrule = center on,match:tag portal-dialogs
 
 # Only add the Core applications here
-windowrule = float,class:^(com.gabm.satty)$
-windowrule = float,class:^(org.kde.dolphin)$,title:^(Progress Dialog — Dolphin)$
-windowrule = float,class:^(org.kde.dolphin)$,title:^(Copying — Dolphin)$
-windowrule = float,title:^(About Mozilla Firefox)$
-windowrule = float,class:^(.*)$,initialTitle:^(top)$
-windowrule = float,class:^(.*)$,initialTitle:^(btop)$
-windowrule = float,class:^(.*)$,initialTitle:^(htop)$
-windowrule = float,class:^(vlc)$
-windowrule = float,class:^(kvantummanager)$
-windowrule = float,class:^(qt5ct)$
-windowrule = float,class:^(qt6ct)$
-windowrule = float,class:^(nwg-look)$
-windowrule = float,class:^(nwg-displays)$
-windowrule = float,class:^(org.kde.ark)$
-windowrule = float,class:^(org.pulseaudio.pavucontrol)$
-windowrule = float,class:^(blueman-manager)$
-windowrule = float,class:^(nm-applet)$
-windowrule = float,class:^(nm-connection-editor)$
-windowrule = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrule = match:float true,match:class ^(com.gabm.satty)$
+windowrule = match:float true,match:class ^(org.kde.dolphin)$,match:title ^(Progress Dialog — Dolphin)$
+windowrule = match:float true,match:class ^(org.kde.dolphin)$,match:title ^(Copying — Dolphin)$
+windowrule = match:float true,match:title ^(About Mozilla Firefox)$
+windowrule = match:float true,match:class ^(.*)$,match:initial_title ^(top)$
+windowrule = match:float true,match:class ^(.*)$,match:initial_title ^(btop)$
+windowrule = match:float true,match:class ^(.*)$,match:initial_title ^(htop)$
+windowrule = match:float true,match:class ^(vlc)$
+windowrule = match:float true,match:class ^(kvantummanager)$
+windowrule = match:float true,match:class ^(qt5ct)$
+windowrule = match:float true,match:class ^(qt6ct)$
+windowrule = match:float true,match:class ^(nwg-look)$
+windowrule = match:float true,match:class ^(nwg-displays)$
+windowrule = match:float true,match:class ^(org.kde.ark)$
+windowrule = match:float true,match:class ^(org.pulseaudio.pavucontrol)$
+windowrule = match:float true,match:class ^(blueman-manager)$
+windowrule = match:float true,match:class ^(nm-applet)$
+windowrule = match:float true,match:class ^(nm-connection-editor)$
+windowrule = match:float true,match:class ^(org.kde.polkit-kde-authentication-agent-1)$
 
 # common popups
-windowrule = tag +common-popups,initialTitle:^(Open File)$
-windowrule = tag +common-popups,title:^(Choose Files)$
-windowrule = tag +common-popups,title:^(Save As)$
-windowrule = tag +common-popups,title:^(Confirm to replace files)$
-windowrule = tag +common-popups,title:^(File Operation Progress)$
-windowrule = tag +common-popups,class:^([Xx]dg-desktop-portal-gtk)$
-windowrule = tag +common-popups,title:^(Open)$
-windowrule = tag +common-popups,title:^(Authentication Required)$
-windowrule = tag +common-popups,title:^(Add Folder to Workspace)$
-windowrule = tag +common-popups,title:^(File Upload)(.*)$
-windowrule = tag +common-popups,title:^(Choose wallpaper)(.*)$
-windowrule = tag +common-popups,title:^(Library)(.*)$
-windowrule = tag +common-popups,class:^(.*dialog.*)$
-windowrule = tag +common-popups,title:^(.*dialog.*)$
+windowrule = tag +common-popups,match:initial_title ^(Open File)$
+windowrule = tag +common-popups,match:title ^(Choose Files)$
+windowrule = tag +common-popups,match:title ^(Save As)$
+windowrule = tag +common-popups,match:title ^(Confirm to replace files)$
+windowrule = tag +common-popups,match:title ^(File Operation Progress)$
+windowrule = tag +common-popups,match:class ^([Xx]dg-desktop-portal-gtk)$
+windowrule = tag +common-popups,match:title ^(Open)$
+windowrule = tag +common-popups,match:title ^(Authentication Required)$
+windowrule = tag +common-popups,match:title ^(Add Folder to Workspace)$
+windowrule = tag +common-popups,match:title ^(File Upload)(.*)$
+windowrule = tag +common-popups,match:title ^(Choose wallpaper)(.*)$
+windowrule = tag +common-popups,match:title ^(Library)(.*)$
+windowrule = tag +common-popups,match:class ^(.*dialog.*)$
+windowrule = tag +common-popups,match:title ^(.*dialog.*)$
 
 # portal-dialogs
-windowrule = tag +portal-dialogs,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
-windowrule = tag +portal-dialogs,class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrule = tag +portal-dialogs,class:^([Xx]dg-desktop-portal-gtk)$
+windowrule = tag +portal-dialogs,match:class ^(org.freedesktop.impl.portal.desktop.hyprland)$
+windowrule = tag +portal-dialogs,match:class ^(org.freedesktop.impl.portal.desktop.gtk)$
+windowrule = tag +portal-dialogs,match:class ^([Xx]dg-desktop-portal-gtk)$
 
 
 
 # // █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # // █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-layerrule = blur,rofi
-layerrule = ignorezero,rofi
-layerrule = blur,notifications
-layerrule = ignorezero,notifications
-layerrule = blur,swaync-notification-window
-layerrule = ignorezero,swaync-notification-window
-layerrule = blur,swaync-control-center
-layerrule = ignorezero,swaync-control-center
-layerrule = blur,logout_dialog
-layerrule = ignorezero,logout_dialog
-layerrule = blur,waybar
-layerrule = ignorezero,waybar
+layerrule = blur true,match:namespace rofi
+layerrule = ignore_alpha 0,match:namespace rofi
+layerrule = blur true,match:namespace notifications
+layerrule = ignore_alpha 0,match:namespace notifications
+layerrule = blur true,match:namespace swaync-notification-window
+layerrule = ignore_alpha 0,match:namespace swaync-notification-window
+layerrule = blur true,match:namespace swaync-control-center
+layerrule = ignore_alpha 0,match:namespace swaync-control-center
+layerrule = blur true,match:namespace logout_dialog
+layerrule = ignore_alpha 0,match:namespace logout_dialog
+layerrule = blur true,match:namespace waybar
+layerrule = ignore_alpha 0,match:namespace waybar
