Added version guard

--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -7,6 +7,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
+# hyprlang if HYPRLAND_V_0_53
+
 # Sizes for floating popups
 windowrule = size <85% <95%,match:float true
 windowrule = match:tag common-popups true , match:float true
@@ -75,3 +77,11 @@ layerrule = blur true,match:namespace logout_dialog
 layerrule = ignore_alpha 0,match:namespace logout_dialog
 layerrule = blur true,match:namespace waybar
 layerrule = ignore_alpha 0,match:namespace waybar
+
+# hyprlang endif
+
+# hyprlang if !HYPRLAND_V_0_53
+
+source = $XDG_DATA_HOME/hyde/migration/hypr/0.52_windowrules.conf
+
+# hyprlang endif
