Uses windowrule block for default windowrule

--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -9,74 +9,85 @@
 
 # hyprlang if HYPRLAND_V_0_53
 
-# Sizes for floating popups
-windowrule = size <85% <95%,match:float true
-windowrule = match:tag common-popups true , match:float true
-windowrule = size <60% <90%,match:tag common-popups
-
 # Fix file chooser dialogs opening off-screen
-windowrule = match:float true,match:tag portal-dialogs
+windowrule = float true,match:tag portal-dialogs
 windowrule = center on,match:tag portal-dialogs
 
 # Only add the Core applications here
-windowrule = match:float true,match:class ^(com.gabm.satty)$
-windowrule = match:float true,match:class ^(org.kde.dolphin)$,match:title ^(Progress Dialog — Dolphin)$
-windowrule = match:float true,match:class ^(org.kde.dolphin)$,match:title ^(Copying — Dolphin)$
-windowrule = match:float true,match:title ^(About Mozilla Firefox)$
-windowrule = match:float true,match:class ^(.*)$,match:initial_title ^(top)$
-windowrule = match:float true,match:class ^(.*)$,match:initial_title ^(btop)$
-windowrule = match:float true,match:class ^(.*)$,match:initial_title ^(htop)$
-windowrule = match:float true,match:class ^(vlc)$
-windowrule = match:float true,match:class ^(kvantummanager)$
-windowrule = match:float true,match:class ^(qt5ct)$
-windowrule = match:float true,match:class ^(qt6ct)$
-windowrule = match:float true,match:class ^(nwg-look)$
-windowrule = match:float true,match:class ^(nwg-displays)$
-windowrule = match:float true,match:class ^(org.kde.ark)$
-windowrule = match:float true,match:class ^(org.pulseaudio.pavucontrol)$
-windowrule = match:float true,match:class ^(blueman-manager)$
-windowrule = match:float true,match:class ^(nm-applet)$
-windowrule = match:float true,match:class ^(nm-connection-editor)$
-windowrule = match:float true,match:class ^(org.kde.polkit-kde-authentication-agent-1)$
+windowrule {
+name = hyde_floating_apps
+tag = +hyde_floating_apps
+match:class = ^(\
+                com\.gabm\.satty|org\.kde\.dolphin|vlc\|\
+                kvantummanager|qt[56]ct|nwg-(look|displays)|\
+                org\.kde\.ark|org\.pulseaudio\.pavucontrol|\
+                blueman-manager|nm-(applet|connection-editor)|\
+                org\.kde\.polkit-kde-authentication-agent-1 \
+                )$
+
+}
 
 # common popups
-windowrule = tag +common-popups,match:initial_title ^(Open File)$
-windowrule = tag +common-popups,match:title ^(Choose Files)$
-windowrule = tag +common-popups,match:title ^(Save As)$
-windowrule = tag +common-popups,match:title ^(Confirm to replace files)$
-windowrule = tag +common-popups,match:title ^(File Operation Progress)$
-windowrule = tag +common-popups,match:class ^([Xx]dg-desktop-portal-gtk)$
-windowrule = tag +common-popups,match:title ^(Open)$
-windowrule = tag +common-popups,match:title ^(Authentication Required)$
-windowrule = tag +common-popups,match:title ^(Add Folder to Workspace)$
-windowrule = tag +common-popups,match:title ^(File Upload)(.*)$
-windowrule = tag +common-popups,match:title ^(Choose wallpaper)(.*)$
-windowrule = tag +common-popups,match:title ^(Library)(.*)$
-windowrule = tag +common-popups,match:class ^(.*dialog.*)$
-windowrule = tag +common-popups,match:title ^(.*dialog.*)$
+windowrule {
+    name = hyde_common_popups
+    tag = +hyde_common_popups
+    match:title = ^(\
+        Choose Files|Save As|Confirm to replace files|\
+        File Operation Progress|Open|Authentication Required|\
+        Add Folder to Workspace|File Upload.*|Choose wallpaper.*|\
+        Library.*|.*dialog.*\
+    )$
+    match:initial_title =  ^(Open File|Volume Control|Save As.*)$
+    match:class = ^(.*dialog.*|[Xx]dg-desktop-portal-gtk)$
 
-# portal-dialogs
-windowrule = tag +portal-dialogs,match:class ^(org.freedesktop.impl.portal.desktop.hyprland)$
-windowrule = tag +portal-dialogs,match:class ^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrule = tag +portal-dialogs,match:class ^([Xx]dg-desktop-portal-gtk)$
+}
 
+windowrule {
+    name = hyde_portal_dialogs
+    tag = +hyde_portal_dialogs
+    match:class = ^(\
+    org\.freedesktop\.impl\.portal\.desktop\.(hyprland|gtk)|\
+    [Xx]dg-desktop-portal-gtk\
+    )$
+}
+
+
+windowrule {
+    name = hyde_picture_in_picture
+    tag = +picture-in-picture
+    tag = +hyde_picture_in_picture
+    float = true
+    keep_aspect_ratio = true
+    move = 73% 72%
+    size = 25%
+    pin = true
+}
+
+
+windowrule = float true, match:tag hyde_floating_apps
+windowrule = float true, center true, match:tag hyde_common_popups
+windowrule = float true, center true, match:tag hyde_portal_dialogs
+
+windowrule = match:float true, match:class hyde_floating_apps
 
 
 # // █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # // █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-layerrule = blur true,match:namespace rofi
-layerrule = ignore_alpha 0,match:namespace rofi
-layerrule = blur true,match:namespace notifications
-layerrule = ignore_alpha 0,match:namespace notifications
-layerrule = blur true,match:namespace swaync-notification-window
-layerrule = ignore_alpha 0,match:namespace swaync-notification-window
-layerrule = blur true,match:namespace swaync-control-center
-layerrule = ignore_alpha 0,match:namespace swaync-control-center
-layerrule = blur true,match:namespace logout_dialog
-layerrule = ignore_alpha 0,match:namespace logout_dialog
-layerrule = blur true,match:namespace waybar
-layerrule = ignore_alpha 0,match:namespace waybar
+layerrule {
+name = hyde_layer_blur
+match:namespace = ^(rofi|notifications|swaync-(notification-window|control-center)|waybar|logout_dialog)$
+blur = true
+}
+
+layerrule {
+name = hyde_layer_ignore_alpha
+match:namespace = ^(rofi|notifications|swaync-(notification-window|control-center)|logout_dialog|waybar|selection)$
+ignore_alpha = true
+}
+
+layerrule = no_anim true,match:namespace selection
+
 
 # hyprlang endif
 
