fix regression when using backslash on regex

--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -17,13 +17,7 @@ windowrule = center on,match:tag portal-dialogs
 windowrule {
 name = hyde_floating_apps
 tag = +hyde_floating_apps
-match:class = ^(\
-                com\.gabm\.satty|org\.kde\.dolphin|vlc\|\
-                kvantummanager|qt[56]ct|nwg-(look|displays)|\
-                org\.kde\.ark|org\.pulseaudio\.pavucontrol|\
-                blueman-manager|nm-(applet|connection-editor)|\
-                org\.kde\.polkit-kde-authentication-agent-1 \
-                )$
+match:class = ^(com\.gabm\.satty|org\.kde\.dolphin|vlc\|kvantummanager|qt[56]ct|nwg-(look|displays)|org\.kde\.ark|org\.pulseaudio\.pavucontrol|blueman-manager|nm-(applet|connection-editor)|org\.kde\.polkit-kde-authentication-agent-1 )$
 
 }
 
@@ -31,12 +25,7 @@ match:class = ^(\
 windowrule {
     name = hyde_common_popups
     tag = +hyde_common_popups
-    match:title = ^(\
-        Choose Files|Save As|Confirm to replace files|\
-        File Operation Progress|Open|Authentication Required|\
-        Add Folder to Workspace|File Upload.*|Choose wallpaper.*|\
-        Library.*|.*dialog.*\
-    )$
+    match:title = ^(Choose Files|Save As|Confirm to replace files|File Operation Progress|Open|Authentication Required|Add Folder to Workspace|File Upload.*|Choose wallpaper.*|Library.*|.*dialog.*)$
     match:initial_title =  ^(Open File|Volume Control|Save As.*)$
     match:class = ^(.*dialog.*|[Xx]dg-desktop-portal-gtk)$
 
@@ -45,10 +34,7 @@ windowrule {
 windowrule {
     name = hyde_portal_dialogs
     tag = +hyde_portal_dialogs
-    match:class = ^(\
-    org\.freedesktop\.impl\.portal\.desktop\.(hyprland|gtk)|\
-    [Xx]dg-desktop-portal-gtk\
-    )$
+    match:class = ^(org\.freedesktop\.impl\.portal\.desktop\.(hyprland|gtk)|[Xx]dg-desktop-portal-gtk)$
 }
 
 
