--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -17,8 +17,7 @@ windowrule = center on,match:tag portal-dialogs
 windowrule {
 name = hyde_floating_apps
 tag = +hyde_floating_apps
-match:class = ^(com\.gabm\.satty|org\.kde\.dolphin|vlc\|kvantummanager|qt[56]ct|nwg-(look|displays)|org\.kde\.ark|org\.pulseaudio\.pavucontrol|blueman-manager|nm-(applet|connection-editor)|org\.kde\.polkit-kde-authentication-agent-1 )$
-
+match:class = ^(blueman-manager|pavucontrol-qt|com\.gabm\.satty|org\.kde\.dolphin|vlc|kvantummanager|qt[56]ct|nwg-(look|displays)|org\.kde\.ark|org\.pulseaudio\.pavucontrol|blueman-manager|nm-(applet|connection-editor)|org\.kde\.polkit-kde-authentication-agent-1 )$
 }
 
 # common popups
@@ -26,10 +25,10 @@ windowrule {
     name = hyde_common_popups
     tag = +hyde_common_popups
     match:title = ^(Choose Files|Save As|Confirm to replace files|File Operation Progress|Open|Authentication Required|Add Folder to Workspace|File Upload.*|Choose wallpaper.*|Library.*|.*dialog.*)$
-    match:initial_title =  ^(Open File|Volume Control|Save As.*)$
-    match:class = ^(.*dialog.*|[Xx]dg-desktop-portal-gtk)$
-
 }
+
+windowrule = match:initial_title ^(Open File|Volume Control|Save As.*)$, tag +hyde_common_popups
+windowrule = match:class ^(.*dialog.*|[Xx]dg-desktop-portal-gtk)$, tag +hyde_common_popups
 
 windowrule {
     name = hyde_portal_dialogs
