good stuff in CHANDLOG

--- a/Configs/.local/share/hyde/schema/config.toml
+++ b/Configs/.local/share/hyde/schema/config.toml
@@ -52,6 +52,7 @@ scale = 10  # Scaling for cliphist.
 # swwwallselect.sh configuration.
 [rofi.wallpaper]
 scale = 10  # Scaling for wallpaper.
+column_count = 3  # Number of columns for wallpaper selector.
 
 # emoji-picker.sh configuration.
 [rofi.emoji]
@@ -62,6 +63,7 @@ args = ["-multi-select"]  # Additional arguments for emoji picker.
 # themeselect.sh configuration.
 [rofi.theme]
 scale = 6  # Scaling for theme selector.
+column_count = 3  # Number of columns for theme selector.
 
 # hyde-shell rofi.websearch.sh configuration.
 [rofi.websearch]
