--- a/Configs/.local/share/hyde/schema/config.toml.json
+++ b/Configs/.local/share/hyde/schema/config.toml.json
@@ -192,6 +192,11 @@
                             "default": 10,
                             "description": "Scaling for wallpaper.",
                             "type": "integer"
+                        },
+                        "column_count": {
+                            "default": 3,
+                            "description": "Number of columns for wallpaper selector.",
+                            "type": "integer"
                         }
                     }
                 },
@@ -233,6 +238,20 @@
                             "default": 6,
                             "description": "Scaling for theme selector.",
                             "type": "integer"
+                        },
+                        "column_count": {
+                            "default": 3,
+                            "description": "Number of columns for theme selector.",
+                            "type": "integer"
+                        },
+                        "thumb_style": {
+                            "description": "Thumbnail style for theme selector.",
+                            "options": [
+                                "sqre",
+                                "quad",
+                                "blur"
+                            ],
+                            "type": "string"
                         }
                     }
                 },
