Added Categorized Version Guards For windowrules and keybindings!

--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -4,7 +4,12 @@
 # see https://wiki.hyprland.org/configuring/keywords/ for more
 # example binds, see https://wiki.hyprland.org/configuring/binds/ for more
 
-# Grouping of binds for easier management
+#? ------- KEYBINDS_HYPRLAND_V_0_53 COMPATIBLE ----------------
+#   This Config is compatible with keybinding changes in Hyprland v0.53+
+#   To ensure your system is working we will not disable this block
+#   User template files will be provided in $XDG_DATA_HOME/hyde/templates/hypr/keybindings.conf for manual update.
+
+#? ------- Grouping of binds for easier management ----------------
 #  $d=[Group Name|Subgroup Name1|Subgroup Name2|...]
 # '$d' is a variable that is used to group binds together (or use another variable)
 # This is only for organization purposes and is not a defined hyprland variable
@@ -14,8 +19,7 @@
 # Main - The main groupname
 # Subgroup1.. - The subgroup names can be use to avoid repeating the same description
 
-
-#*  Variables 
+#? ------- Variables ----------------
 # Default if commented out
 # $mainMod = Super # super / meta / windows key
 # Assign apps
