Window rules fixups for hyprland v0.53 (#1509)
* fix: add missing match prop for PIP windows

* fix: change `move` & `size` effects to supported syntax

According to
https://wiki.hypr.land/Configuring/Window-Rules/#expressions

> Expressions are space-separated, so your math cannot have spaces. They
are regular, math expressions, with a few variables exposed, names of
which are self-explanatory. All position variables are monitor-local.
>
> `monitor_w` and `monitor_h` for monitor size
> `window_x` and `window_y` for window position
> `window_w` and `window_h` for window size
> `cursor_x` and `cursor_y` for cursor position
>
> Example expressions:
>
> ```
> window_w*0.5
> (monitor_w/2)+17
> ```

* fix: remove doubled `true` value for jetbrains windowrule

* fix: change window rule for PIP to new syntax in places noted by bot

--- a/Configs/.local/share/hypr/windowrules.conf
+++ b/Configs/.local/share/hypr/windowrules.conf
@@ -39,12 +39,13 @@ windowrule {
 
 windowrule {
     name = hyde_picture_in_picture
+    match:title = ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
     tag = +picture-in-picture
     tag = +hyde_picture_in_picture
     float = true
     keep_aspect_ratio = true
-    move = 73% 72%
-    size = 25%
+    move = (monitor_w*0.73) (monitor_h*0.72)
+    size = (monitor_w*0.25) (monitor_h*0.25)
     pin = true
 }
 
