feat: rename waybar module `custom/applauncher` -> `custom/app-launcher`

--- a/Configs/.local/share/waybar/modules/custom-app-launcher.jsonc
+++ b/Configs/.local/share/waybar/modules/custom-app-launcher.jsonc
@@ -1,5 +1,5 @@
 {
-    "custom/applauncher": {
+    "custom/app-launcher": {
         "format": "",
         "tooltip": true,
         "tooltip-format": "  Application Launcher",
