fix: update NVIDIA hardware cursor config

--- a/Configs/.config/hypr/nvidia.conf
+++ b/Configs/.config/hypr/nvidia.conf
@@ -11,11 +11,9 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia # Disable this if you have issues with sc
 
 # If you want to try hardware cursors,
 # you can enable them by setting `cursor:no_hardware_cursors = false` ,
-# but it will require also enabling `cursor:allow_dumb_copy`
-# which may cause small to major hitches whenever the cursor shape changes.
-# If this is a problem on your system, keep hardware cursors disabled.
+# but it will also require enabling `cursor:use_cpu_buffer`
 cursor:no_hardware_cursors = true # Set to true to avoid hitches
-# cursor:allow_dumb_copy = true
+# cursor:use_cpu_buffer = true
 
 # https://wiki.hyprland.org/Nvidia/#va-api-hardware-video-acceleration
 # Hardware video acceleration on Nvidia and Wayland is
